[gd_scene load_steps=12 format=3 uid="uid://c4hxjjqw7jav"]

[ext_resource type="Script" path="res://player.gd" id="1_h0d5p"]
[ext_resource type="Script" path="res://legs.gd" id="2_56ap1"]
[ext_resource type="Script" path="res://Camera.gd" id="2_k0umv"]
[ext_resource type="Texture2D" uid="uid://6b3s8gxw25bs" path="res://Assets/full_heart.png" id="5_w7bb4"]
[ext_resource type="Texture2D" uid="uid://covupuvpi2u5h" path="res://Assets/dead_heart.png" id="6_hgg3t"]
[ext_resource type="Texture2D" uid="uid://njgn8en0aqcd" path="res://Assets/half_heart.png" id="7_axyfy"]

[sub_resource type="BoxShape3D" id="BoxShape3D_crbgy"]
size = Vector3(1, 0.373108, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_t425c"]
albedo_color = Color(0.992157, 1, 0.478431, 1)

[sub_resource type="BoxMesh" id="BoxMesh_k3lw4"]
material = SubResource("StandardMaterial3D_t425c")

[sub_resource type="BoxShape3D" id="BoxShape3D_vrlx4"]

[sub_resource type="BoxShape3D" id="BoxShape3D_6le54"]
size = Vector3(1, 0.323364, 0.615746)

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0)
script = ExtResource("1_h0d5p")

[node name="legs" type="Area3D" parent="."]
script = ExtResource("2_56ap1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="legs"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.313446, 0)
shape = SubResource("BoxShape3D_crbgy")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_k3lw4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_vrlx4")

[node name="Camera" type="Node3D" parent="."]
top_level = true
script = ExtResource("2_k0umv")

[node name="Camera_Target" type="Node3D" parent="Camera"]
transform = Transform3D(1, 0, 0, 0, 0.937458, 0.348098, 0, -0.348098, 0.937458, 0, 2.3481, 4.93746)

[node name="Camera3D" type="Camera3D" parent="Camera/Camera_Target"]
transform = Transform3D(1, 0, 0, 0, 0.994799, -0.101855, 0, 0.101855, 0.994799, 0, 0.201363, -1.02113)

[node name="hitbox" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="hitbox"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0.147095, -0.0278397)
shape = SubResource("BoxShape3D_6le54")

[node name="FullHeart" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(235, 978)
texture = ExtResource("5_w7bb4")

[node name="FullHeart2" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(175, 978)
texture = ExtResource("5_w7bb4")

[node name="FullHeart3" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(115, 978)
texture = ExtResource("5_w7bb4")

[node name="DeadHeart" type="Sprite2D" parent="."]
z_index = 3
position = Vector2(115, 978)
texture = ExtResource("6_hgg3t")

[node name="DeadHeart2" type="Sprite2D" parent="."]
z_index = 3
position = Vector2(175, 978)
texture = ExtResource("6_hgg3t")

[node name="DeadHeart3" type="Sprite2D" parent="."]
z_index = 3
position = Vector2(235, 978)
texture = ExtResource("6_hgg3t")

[node name="HalfHeart" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(116, 978)
texture = ExtResource("7_axyfy")

[node name="HalfHeart2" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(175, 978)
texture = ExtResource("7_axyfy")

[node name="HalfHeart3" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(235, 978)
texture = ExtResource("7_axyfy")

[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
